# otus-cpp-basics_02

./: CMakeLists.txt  hello_world.cpp  move_me_out.cpp  move_me_out.h  readme
